manifests/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scandiweb-buddy
  labels:
    app: scandiweb-buddy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scandiweb-buddy
  template:
    metadata:
      name: scandiweb-buddy
      labels:
        app: scandiweb-buddy
    spec:
      containers:
        - name: scandiweb-buddy
          image: 536697258217.dkr.ecr.eu-west-1.amazonaws.com/github/readymage-internal/scandiweb-buddy:latest 
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 256Mi
              cpu: '0.25'
            limits:
              memory: 256Mi
              cpu: '0.5'
      restartPolicy: Always
