manifests/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: scandiweb-buddy
spec:
  selector:
    app: scandiweb-buddy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
