manifests/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scandiweb-buddy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - buddytools.scandiweb.com
  rules:
    - host: buddytools.scandiweb.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: scandiweb-buddy
                port:
                  number: 80
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: scandiweb-buddy
                port:
                  number: 80
